# slds-tools

./: AGENTS.md  CLAUDE.md  todos.txt
.github/workflows/: docker.yml
devc/: CLAUDE.md  README.md  devc  podman_cheatsheet.md
devc/attic/: README.md  specs.md
devc/attic/devc/: devc-build  devc-ls
devc/devc/: devc  devc-list-images
devc/podman-dev-images/: .gitconfig  .gitignore_global  .tmux.conf  .zshrc  base.Dockerfile  python-base.Dockerfile  python-react.Dockerfile  r-base.Dockerfile  r-opm.Dockerfile
devc/podman-dev-images/python/.devcontainer/: devcontainer.json
devc/podman-dev-images/r-tools/: rcmdcheck
docker/: CLAUDE.md
docker/default/: Dockerfile  README.md  Rprofile.site  install_cran.R  install_mlr3.R  install_packages.R  zshrc
publs/: .gitignore  CLAUDE.md  README.md  architecture.md  config.yaml  members.yaml  pyproject.toml  slds.bib
publs/src/publs/: __init__.py  __main__.py  bibdb.py  bibtex.py  cli.py  config.py  export.py  match.py  models.py  review.py  scholar.py
publs/src/publs/sources/: __init__.py  openalex.py
