[project]
name = "publs"
version = "0.1.0"
description = "Scrape SLDS member publications from Google Scholar into per-member BibTeX files."
requires-python = ">=3.11"
dependencies = [
    "scholarly>=1.7.11",
    "pyyaml>=6.0",
    "click>=8.1",
    "playwright>=1.49",
    "bibtexparser>=1.4",
]

[project.scripts]
publs = "publs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/publs"]
